2010-04-06  Stas Boukarev  <stassats@gmail.com>

	* slime-sprof.el (slime-sprof-format): Remove references to the
	removed code.

2010-04-05  Stas Boukarev  <stassats@gmail.com>

	* slime-repl.el (slime-repl-inside-string-or-comment-p): New
	function, when in the REPL prompt, narrow the search to the
	prompt, otherwise stray " from the previous prompts
	or outputs may confuse slime-inside-string-or-comment-p.

	* slime-autodoc.el (slime-autodoc): Use
	slime-repl-inside-string-or-comment-p when fbound.

2010-04-05  Stas Boukarev  <stassats@gmail.com>

	* slime-autodoc.el (slime-autodoc-manually): Rename from
	slime-autodoc-full.
	Like slime-autodoc, but when called twice,
	or after slime-autodoc was already automatically called,
	display multiline arglist.

2010-04-05  Stas Boukarev  <stassats@gmail.com>

	* slime-autodoc.el (slime-autodoc-full): New command,
	displays multiline arglists. Bound to C-c C-d a.
	(slime-make-autodoc-rpc-form): Don't send
	:print-lines to autodoc, always use the actual width for
	:print-right-margin, remove newlines on formatting when needed.
	(slime-autodoc): Add optional parameter multilinep defaulted to
	slime-autodoc-use-multiline-p, pass it to slime-format-autodoc.

	* swank-arglists.lisp (autodoc, decoded-arglist-to-string): remove
	print-lines parameter, it's not used anymore.

2010-04-05  Stas Boukarev  <stassats@gmail.com>

	* slime-sprof.el (slime-sprof-browser): Use slime-with-popup-buffer for
	buffer creation.

2010-04-03  Stas Boukarev  <stassats@gmail.com>

	* swank-arglists.lisp (print-decoded-arglist): prin1-arg -> print-arg.

2010-04-03  Stas Boukarev  <stassats@gmail.com>

	* swank-arglists.lisp (print-decoded-arglist): Print keywords using
	princ again.

2010-04-03  Stas Boukarev  <stassats@gmail.com>

	* swank-arglists.lisp (arglist-dispatch): Handle method qualifiers.
	(print-arg): Renamed from princ-arg.
	(prin1-arg): Removed.
	* slime-autodoc.el (autodoc.1): Add test-case for method qualifiers
