@@ -92,16 +92,15 @@ If false, move point to the end of the inserted text."
                (cdr (read arglist))))
             (function-call-position-p
              (save-excursion
-                (backward-sexp)
-                (equal (char-before) ?\())))
+               (backward-sexp)
+               (equal (char-before) ?\())))
         (when function-call-position-p
           (if (null args)
               (insert-and-inherit ")")
-            (insert-and-inherit " ")
-            (when (and slime-space-information-p
-                       (slime-background-activities-enabled-p)
-                       (not (minibuffer-window-active-p (minibuffer-window))))
-              (slime-echo-arglist))))))))
+              (insert-and-inherit " ")
+              (when (and (slime-background-activities-enabled-p)
+                         (not (minibuffer-window-active-p (minibuffer-window))))
+                (slime-echo-arglist))))))))
 
 (defun* slime-contextual-completions (beg end) 
   "Return a list of completions of the token from BEG to END in the
